# glsl-editor

./: CMakeLists.txt  LICENSE  README.md  main.c  make
shader/: dummy.fs
src/: main.c
